logs/dag_id=1Training_DAG_V1.0/run_id=manual__2024-02-13T114904.241255+0000/task_id=data_to_db/attempt=1.log
[2024-02-13T11:49:11.160+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:49:04.241255+00:00 [queued]>
[2024-02-13T11:49:11.171+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:49:04.241255+00:00 [queued]>
[2024-02-13T11:49:11.171+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-13T11:49:11.190+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-13 11:49:04.241255+00:00
[2024-02-13T11:49:11.197+0000] {standard_task_runner.py:60} INFO - Started process 4601 to run task
[2024-02-13T11:49:11.202+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', '1Training_DAG_V1.0', 'data_to_db', 'manual__2024-02-13T11:49:04.241255+00:00', '--job-id', '11388', '--raw', '--subdir', 'DAGS_FOLDER/traning_dag.py', '--cfg-path', '/tmp/tmpkm9rn740']
[2024-02-13T11:49:11.203+0000] {standard_task_runner.py:88} INFO - Job 11388: Subtask data_to_db
[2024-02-13T11:49:11.258+0000] {task_command.py:423} INFO - Running <TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:49:04.241255+00:00 [running]> on host 06573eafe810
[2024-02-13T11:49:11.376+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='1Training_DAG_V1.0' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-13T11:49:04.241255+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-13T11:49:04.241255+00:00'
[2024-02-13T11:49:11.412+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-13T11:49:11.447+0000] {traning_dag.py:34} INFO -    Москва  2024-02-12  0  -5  748  1
0  Москва  2024-02-12  1  -6  747  0
1  Москва  2024-02-12  2  -6  747  0
2  Москва  2024-02-12  3  -6  747  0
3  Москва  2024-02-12  4  -5  746  1
4  Москва  2024-02-12  5  -5  746  0
[2024-02-13T11:49:11.460+0000] {traning_dag.py:41} INFO - columns: Москва, 2024-02-12, 0, -5, 748, 1
[2024-02-13T11:49:11.461+0000] {traning_dag.py:42} INFO - columns: Index(['Москва', '2024-02-12', '0', '-5', '748', '1'], dtype='object')
[2024-02-13T11:49:11.462+0000] {traning_dag.py:46} INFO - values: VALUES(%s,%s,%s,%s,%s,%s)
[2024-02-13T11:49:11.473+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/traning_dag.py", line 51, in csv_db
    psycopg2.extras.execute_batch(pCursor, insert_stmt, df.values)
  File "/home/airflow/.local/lib/python3.8/site-packages/psycopg2/extras.py", line 1216, in execute_batch
    cur.execute(b";".join(sqls))
psycopg2.errors.SyntaxError: syntax error at or near "2024"
LINE 1: INSERT INTO Training (Москва, 2024-02-12, 0, -5, 748, 1) VAL...
                                      ^

[2024-02-13T11:49:11.489+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=1Training_DAG_V1.0, task_id=data_to_db, execution_date=20240213T114904, start_date=20240213T114911, end_date=20240213T114911
[2024-02-13T11:49:11.521+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 11388 for task data_to_db (syntax error at or near "2024"
LINE 1: INSERT INTO Training (Москва, 2024-02-12, 0, -5, 748, 1) VAL...
                                      ^
; 4601)
[2024-02-13T11:49:11.537+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-13T11:49:11.577+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
